# benchmark-ghc

./: .gitignore  Cargo.toml  LICENSE  benchmark-ghc.cabal  rust-toolchain.toml
.cargo/: config.toml
.github/scripts/: get_matrix_values.sh
.github/workflows/: ci.yml
