cabal-version:      3.4
name:               benchmark-ghc
version:            0.1.0.0
license:            BSD-2-Clause
license-file:       LICENSE
author:             Martijn Bastiaan
maintainer:         martijn@hmbastiaan.nl
category:           Development
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

executable benchmark-ghc
    import:           warnings
    main-is:          Main.hs
    build-depends:    base
    hs-source-dirs:   app
    default-language: Haskell2010
